<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    android:id="@id/scrollView"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_background_white"
            android:paddingVertical="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.96">

            <ImageView
                android:id="@+id/buttonRelatorio"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:elevation="5dp"
                android:src="@drawable/ic_baseline_assignment_24" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/menuRelatorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    app:mcv_selectionColor="#00F"
                    app:mcv_showOtherDates="all"
                    app:mcv_tileSize="55dp" />

                <TextView
                    android:id="@+id/textoTotalGanho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/receitaText"
                    android:textColor="@color/background"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/editDespesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/despesa"
                    android:textColor="@color/background"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/editSaldo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/saldo_r_100_00"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonalcoolXGasolina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/blue_background"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonCalculoKmLitro"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/conGasOuAlco"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.228"
                    app:srcCompat="@drawable/alcool" />

                <TextView
                    android:id="@+id/textAlcolOuGas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:gravity="center"
                    android:text="@string/lcool_x_gasolina"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/conGasOuAlco" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonCalculoKmLitro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@drawable/blue_background"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/buttonalcoolXGasolina"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageLitro"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.228"
                    app:srcCompat="@drawable/media" />

                <TextView
                    android:id="@+id/textKmLitro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mediaConsumo"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageLitro" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonCustoPercurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/blue_background"
                android:paddingHorizontal="21dp"
                android:paddingVertical="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/litrosGasto"
                app:layout_constraintTop_toBottomOf="@+id/buttonalcoolXGasolina">

                <ImageView
                    android:id="@+id/imagepercurso"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.228"
                    app:srcCompat="@drawable/trajeto" />

                <TextView
                    android:id="@+id/textPercurso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/custo_x_trajeto"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imagepercurso" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/litrosGasto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="60dp"
                android:background="@drawable/blue_background"
                app:layout_constraintEnd_toStartOf="@+id/buttonCustoPercurso"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCalculoKmLitro">


                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="28dp"
                    android:paddingVertical="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.228">


                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:src="@drawable/icone_gota" />


                </LinearLayout>


                <TextView
                    android:id="@+id/textLitroGasto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/combust_vel"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/menu"
                fab:menu_animationDelayPerItem="50"
                fab:menu_backgroundColor="@android:color/transparent"
                fab:menu_buttonSpacing="0dp"
                fab:menu_colorNormal="#345CD3"
                fab:menu_colorPressed="@color/icone_color"
                fab:menu_colorRipple="#99FFFFFF"
                fab:menu_fab_label="your_label_here"
                fab:menu_fab_size="mini"
                fab:menu_icon="@drawable/fab_add"
                fab:menu_labels_colorNormal="#333333"
                fab:menu_labels_colorPressed="#444444"
                fab:menu_labels_colorRipple="#66FFFFFF"
                fab:menu_labels_cornerRadius="3dp"
                fab:menu_labels_ellipsize="none"
                fab:menu_labels_margin="0dp"
                fab:menu_labels_maxLines="-1"
                fab:menu_labels_padding="8dp"
                fab:menu_labels_paddingBottom="4dp"
                fab:menu_labels_paddingLeft="8dp"
                fab:menu_labels_paddingRight="8dp"
                fab:menu_labels_paddingTop="4dp"
                fab:menu_labels_position="left"
                fab:menu_labels_showShadow="true"
                fab:menu_labels_singleLine="false"
                fab:menu_labels_textColor="#FFFFFF"
                fab:menu_labels_textSize="14sp"
                fab:menu_openDirection="up"
                fab:menu_shadowColor="#66000000"
                fab:menu_shadowRadius="4dp"
                fab:menu_shadowXOffset="1dp"
                fab:menu_shadowYOffset="3dp"
                fab:menu_showShadow="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.89"
                app:layout_constraintStart_toStartOf="parent">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/addDespesa"
                    fab:fab_size="mini"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_attach_money_22"
                    app:fab_label="Nova Despesa" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/addReceita"
                    fab:fab_label="Menu item 1"
                    fab:fab_size="mini"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_attach_money_22"
                    app:fab_colorNormal="@color/icone_color"
                    app:fab_label="Nova Receita" />

            </com.github.clans.fab.FloatingActionMenu>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <include
            android:id="@+id/include"
            layout="@layout/fragment_fundo"
            android:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>